src/binary/wifi_mgmr_api.rs

pub type wifi_mgmr_ap_msg_t = wifi_mgmr_ap_msg;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wifi_mgmr_profile {
    pub ssid_len: u16,
    pub psk_len: u16,
    pub pmk_len: u16,
    pub mac: [u8; 6usize],
    pub ssid: [crate::binary::c_types::c_char; 33usize],
    pub psk: [crate::binary::c_types::c_char; 65usize],
    pub pmk: [crate::binary::c_types::c_char; 65usize],
    pub band: u8,
    pub freq: u16,
    pub priority: u8,
    pub isActive: u8,
    pub isUsed: u8,
}
pub type wifi_mgmr_profile_t = wifi_mgmr_profile;
#[repr(C, packed)]
#[derive(Copy, Clone)]
pub struct wifi_mgmr_cipher_t {
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize]>,
}
impl wifi_mgmr_cipher_t {
    #[inline]
    pub fn wep40(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_wep40(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn wep104(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_wep104(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn tkip(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_tkip(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn ccmp(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(3usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_ccmp(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(3usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn rsvd(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(4usize, 4u8) as u8) }
    }
    #[inline]
    pub fn set_rsvd(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(4usize, 4u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        wep40: u8,
        wep104: u8,
        tkip: u8,
        ccmp: u8,
        rsvd: u8,
    ) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let wep40: u8 = unsafe { ::core::mem::transmute(wep40) };
            wep40 as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let wep104: u8 = unsafe { ::core::mem::transmute(wep104) };
            wep104 as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let tkip: u8 = unsafe { ::core::mem::transmute(tkip) };
            tkip as u64
        });
        __bindgen_bitfield_unit.set(3usize, 1u8, {
            let ccmp: u8 = unsafe { ::core::mem::transmute(ccmp) };
            ccmp as u64
        });
        __bindgen_bitfield_unit.set(4usize, 4u8, {
            let rsvd: u8 = unsafe { ::core::mem::transmute(rsvd) };
            rsvd as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wifi_mgmr_scan_item {
    pub timestamp_lastseen: u32,
    pub ssid_len: u16,
    pub channel: u8,
    pub rssi: i8,
    pub ssid: [crate::binary::c_types::c_char; 32usize],
    pub ssid_tail: [crate::binary::c_types::c_char; 1usize],
    pub bssid: [u8; 6usize],
    pub ppm_abs: i8,
    pub ppm_rel: i8,
    pub auth: u8,
    pub cipher: u8,
    pub is_used: u8,
}
pub type wifi_mgmr_scan_item_t = wifi_mgmr_scan_item;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wlan_netif {
    pub mode: crate::binary::c_types::c_int,
    pub vif_index: u8,
    pub mac: [u8; 6usize],
    pub dhcp_started: u8,
    pub __bindgen_anon_1: wlan_netif__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union wlan_netif__bindgen_ty_1 {
    pub sta: wlan_netif__bindgen_ty_1__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wlan_netif__bindgen_ty_1__bindgen_ty_1 {
    pub rssi: i8,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wifi_mgmr_connect_ind_stat_info {
    pub status_code: u16,
    pub chan_freq: u16,
    pub ssid: [crate::binary::c_types::c_char; 32usize],
    pub psk: [crate::binary::c_types::c_char; 65usize],
    pub bssid: [u8; 6usize],
    pub type_ind: u8,
    pub chan_band: u8,
}
pub type wifi_mgmr_connect_ind_stat_info_t = wifi_mgmr_connect_ind_stat_info;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wifi_mgmr_sta_basic_info {
    pub sta_idx: u8,
    pub is_used: u8,
    pub sta_mac: [u8; 6usize],
    pub tsfhi: u32,
    pub tsflo: u32,
    pub rssi: crate::binary::c_types::c_int,
    pub data_rate: u8,
}
pub type wifi_mgmr_sta_basic_info_t = wifi_mgmr_sta_basic_info;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wifi_mgmr {
    pub channel: crate::binary::c_types::c_int,
    pub inf_ap_enabled: crate::binary::c_types::c_int,
    pub wlan_sta: wlan_netif,
    pub wlan_ap: wlan_netif,
    pub status: WIFI_MGMR_CONNECTION_STATUS_T,
    pub profiles: [wifi_mgmr_profile_t; 1usize],
    pub profile_active_index: crate::binary::c_types::c_int,
    pub scan_items: [wifi_mgmr_scan_item_t; 50usize],
    pub mq_f: *mut file,
    pub m: stateMachine,
    pub timer: crate::binary::c_types::c_int,
    pub wifi_mgmr_stat_info: wifi_mgmr_connect_ind_stat_info_t,
    pub ready: u8,
    pub country_code: [crate::binary::c_types::c_char; 3usize],
    pub disable_autoreconnect: u8,
    pub channel_nums: crate::binary::c_types::c_int,
    pub pending_task: u32,
    pub features: u32,
    pub scan_item_timeout: crate::binary::c_types::c_int,
    pub hostname: [crate::binary::c_types::c_char; 32usize],
}
pub type wifi_mgmr_t = wifi_mgmr;
extern "C" {
    pub fn wifi_mgmr_event_notify(msg: *mut wifi_mgmr_msg_t) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_state_get_internal(
        state: *mut crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_status_code_clean_internal() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_status_code_get_internal(
        s_code: *mut crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_set_country_code_internal(
        country_code: *mut crate::binary::c_types::c_char,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_sta_cnt_get_internal(sta_cnt: *mut u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_sta_info_get_internal(
        sta_info_internal: *mut wifi_mgmr_sta_basic_info_t,
        idx: u8,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_sta_delete_internal(sta_idx: u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_scan_complete_notify() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub static mut wifiMgmr: wifi_mgmr_t;
}
extern "C" {
    pub fn wifi_mgmr_auth_to_str(auth: u8) -> *mut crate::binary::c_types::c_char;
}
extern "C" {
    pub fn wifi_mgmr_cipher_to_str(cipher: u8) -> *mut crate::binary::c_types::c_char;
}
extern "C" {
    pub fn wifi_mgmr_api_fw_tsen_reload() -> crate::binary::c_types::c_int;
}
#[doc = " @file wifi_mgmr_api.h"]
#[doc = " Copyright (C) Bouffalo Lab 2016-2018"]
#[doc = ""]
#[doc = ""]
#[repr(C, packed)]
#[derive(Copy, Clone)]
pub struct wifi_mgmr_api_cipher_t {
    pub _bitfield_align_1: [u8; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize]>,
}
impl wifi_mgmr_api_cipher_t {
    #[inline]
    pub fn wep40(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_wep40(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn wep104(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_wep104(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn tkip(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_tkip(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn ccmp(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(3usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_ccmp(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(3usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn rsvd(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(4usize, 4u8) as u8) }
    }
    #[inline]
    pub fn set_rsvd(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(4usize, 4u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        wep40: u8,
        wep104: u8,
        tkip: u8,
        ccmp: u8,
        rsvd: u8,
    ) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let wep40: u8 = unsafe { ::core::mem::transmute(wep40) };
            wep40 as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let wep104: u8 = unsafe { ::core::mem::transmute(wep104) };
            wep104 as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let tkip: u8 = unsafe { ::core::mem::transmute(tkip) };
            tkip as u64
        });
        __bindgen_bitfield_unit.set(3usize, 1u8, {
            let ccmp: u8 = unsafe { ::core::mem::transmute(ccmp) };
            ccmp as u64
        });
        __bindgen_bitfield_unit.set(4usize, 4u8, {
            let rsvd: u8 = unsafe { ::core::mem::transmute(rsvd) };
            rsvd as u64
        });
        __bindgen_bitfield_unit
    }
}
extern "C" {
    pub fn wifi_mgmr_api_common_msg(
        ev: WIFI_MGMR_EVENT_T,
        data1: *mut crate::binary::c_types::c_void,
        data2: *mut crate::binary::c_types::c_void,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_connect(
        ssid: *mut crate::binary::c_types::c_char,
        psk: *mut crate::binary::c_types::c_char,
        pmk: *mut crate::binary::c_types::c_char,
        mac: *mut u8,
        band: u8,
        freq: u16,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_cfg_req(
        ops: u32,
        task: u32,
        element: u32,
        type_: u32,
        length: u32,
        buf: *mut u32,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_ip_got(
        ip: u32,
        mask: u32,
        gw: u32,
        dns1: u32,
        dns2: u32,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_ip_update() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_reconnect() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_api_disconnect() -> crate::binary::c_types::c_int;
}
